fix for webkit overflow issue

--- a/style.scss
+++ b/style.scss
@@ -1028,6 +1028,7 @@ ul.item-list {
 			width: 68%; 
 			vertical-align: middle;
 			margin-left: 20px;
+			overflow-wrap: break-word;
 			.item-title span {
 				color: #999; 
 			}
